--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,6 +13,10 @@
                     width: 50px;
                     height: 50px;
                 }
+
+                .price {
+                    color: #ee4d2d;
+                }
             }
         }
 
