--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -1,4 +1,6 @@
 .order-container {
+    min-height: calc(100vh - 145px);
+
     .order-book {
         display: flex;
         gap: 30px;
@@ -28,6 +30,13 @@
             justify-content: space-between;
 
         }
+    }
+
+    .order-book-empty {
+        background: white;
+        padding: 20px;
+        border-radius: 5px;
+        min-height: 400px;
     }
 
     .order-sum {
